[gd_scene load_steps=58 format=2]

[ext_resource path="res://Assets/Personagem/Idle.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Personagem/Pray.png" type="Texture" id=3]
[ext_resource path="res://Assets/Personagem/Attacks.png" type="Texture" id=4]
[ext_resource path="res://Assets/Personagem/Jump.png" type="Texture" id=5]
[ext_resource path="res://Assets/Personagem/Death.png" type="Texture" id=6]
[ext_resource path="res://Assets/Personagem/Hurt.png" type="Texture" id=7]
[ext_resource path="res://Assets/Personagem/Run.png" type="Texture" id=8]
[ext_resource path="res://Som/steelsword.wav" type="AudioStream" id=9]
[ext_resource path="res://Som/pulo.wav" type="AudioStream" id=10]
[ext_resource path="res://Som/dano.wav" type="AudioStream" id=11]
[ext_resource path="res://Som/morte.wav" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.4546, 30.6711 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.4823, 30.6961 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 896, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="SpriteFrames" id=44]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "morte",
"speed": 4.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "caindo",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "rezar",
"speed": 8.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "pulo",
"speed": 8.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "parado",
"speed": 7.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "levar_dano",
"speed": 6.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "correr",
"speed": 12.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "ataque",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 12.6134, 26.7437 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.21257, 11.1183 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.4, 0.4 )
limit_left = 10
limit_top = 36
limit_right = 3590
limit_bottom = 650
smoothing_enabled = true
smoothing_speed = 4.0

[node name="dano" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="dano"]
visible = false
position = Vector2( 3.213, 11.118 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 44 )
animation = "caindo"

[node name="areaataque" type="Area2D" parent="." groups=[
"espada",
]]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="areaataque"]
visible = false
position = Vector2( 31.2167, 11.2975 )
shape = SubResource( 45 )
disabled = true

[node name="puloSom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -5.924

[node name="danoSom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -5.0

[node name="ataqueSom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="MorteSom" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -5.0

[connection signal="body_entered" from="dano" to="." method="_on_dano_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
